{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 246,
  "lineage": "15e1cfcf-1cb9-4a06-24f3-2bbb005701e3",
  "resources": [
    {
      "module": "module.my-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc8d444ee2a42d8a",
            "arn": "arn:aws:ec2:eu-west-1:901438222448:instance/i-0b49dbfd5ee37cc29",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b49dbfd5ee37cc29",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "VMkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dffe46f714715885",
            "private_dns": "ip-10-0-1-17.eu-west-1.compute.internal",
            "private_ip": "10.0.1.17",
            "public_dns": "ec2-54-194-105-154.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.105.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-018f496c5b030b9e0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5156070826d682f",
            "tags": {
              "Name": "created-by-terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d8b0f272d694d1e1"
            ]
          },
          "dependencies": [
            "module.my-ec2.aws_security_group.web_sg",
            "module.my-vpc.aws_subnet.subnet_a",
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:901438222448:security-group/sg-0d8b0f272d694d1e1",
            "description": "Allow SSH connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8b0f272d694d1e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG",
            "name_prefix": "",
            "owner_id": "901438222448",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00e36108e9d065f1e"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:901438222448:internet-gateway/igw-0a412cd1085e50d82",
            "id": "igw-0a412cd1085e50d82",
            "owner_id": "901438222448",
            "vpc_id": "vpc-00e36108e9d065f1e"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b32e5f66edec5b02",
            "owner_id": "901438222448",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a412cd1085e50d82",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-00e36108e9d065f1e"
          },
          "dependencies": [
            "module.my-vpc.aws_internet_gateway.igw",
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0b4ca8ccb286de2",
            "route_table_id": "rtb-0b32e5f66edec5b02",
            "subnet_id": "subnet-0b5156070826d682f"
          },
          "dependencies": [
            "module.my-vpc.aws_internet_gateway.igw",
            "module.my-vpc.aws_route_table.rt",
            "module.my-vpc.aws_subnet.subnet_a",
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:901438222448:subnet/subnet-0292ac1c034318e39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0292ac1c034318e39",
            "map_public_ip_on_launch": false,
            "owner_id": "901438222448",
            "tags": {
              "Name": "private-subnet-tf"
            },
            "vpc_id": "vpc-00e36108e9d065f1e"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:901438222448:subnet/subnet-0bef4da1b575a43d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0bef4da1b575a43d2",
            "map_public_ip_on_launch": false,
            "owner_id": "901438222448",
            "tags": {
              "Name": "private-subnet-2-tf"
            },
            "vpc_id": "vpc-00e36108e9d065f1e"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:901438222448:subnet/subnet-0b5156070826d682f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b5156070826d682f",
            "map_public_ip_on_launch": false,
            "owner_id": "901438222448",
            "tags": {
              "Name": "public-subnet-tf"
            },
            "vpc_id": "vpc-00e36108e9d065f1e"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:901438222448:vpc/vpc-00e36108e9d065f1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039cf97d1e43ed451",
            "default_route_table_id": "rtb-0c239dcede4c221a2",
            "default_security_group_id": "sg-0b15ed40864b71bc9",
            "dhcp_options_id": "dopt-e1d8e387",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00e36108e9d065f1e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c239dcede4c221a2",
            "owner_id": "901438222448",
            "tags": {
              "Name": "VPC-created-by-terraform"
            }
          }
        }
      ]
    }
  ]
}